base-installer (1.90) UNRELEASED; urgency=low

  [ Jérémy Bobbio ]
  * Add versatile as known armel kernel flavour.

  [ Frans Pop ]
  * Remove Bdale Garbee and Sven Luther as Uploaders with many thanks for
    their past contributions.

 -- Frans Pop <fjp@debian.org>  Tue, 08 Apr 2008 13:18:23 +0200

base-installer (1.89) unstable; urgency=low

  [ Martin Michlmayr ]
  * Add a cpuinfo file from QNAP TS-109 (orion) to the test suite.
  * Mark the orion flavour as unusable on non-Orion systems.

  [ Frans Pop ]
  * hppa: change test for SMP support to use /var/numcpus which is created
    by rootskel (from version 1.59); the current test does not work as it
    requires the D-I kernel to have SMP support, which it hasn't.
    Thanks to Grant Grundler for his suggestions.
  * powerpc: correctly recognize systems with 'RS64-IV (sstar)' cpu as
    powerpc64 (closes: #469030).
  * Add support for PA Semi's evaluation systems (#464429). Thanks to
    Olof Johansson for the patch.
  * Now that changing CDs is supported, stop bind-mounting /cdrom in /target
    except for hd-media installs.
  * This requires that /dev is bind-mounted in /target earlier; the
    installation of packages required to mount file systems is left as a
    separate step.

  [ Otavio Salvador ]
  * Add facility to include and exclude packages from the base system by
    preseeding base-installer/includes and base-installer/excludes. Adding
    packages using base_include and base_include CD files still works and
    the packages are added to the preseeded ones.
  * Add facility to use a specific script by preseeding
    base-installer/script.

  [ Martin Michlmayr ]
  * Rename orion to orion5x to allow for support of other Orion
    platforms in the future.

  [ Updated translations ]
  * Amharic (am.po) by Tegegne Tefera
  * Arabic (ar.po) by Ossama M. Khayat
  * Bulgarian (bg.po) by Damyan Ivanov
  * Czech (cs.po) by Miroslav Kure
  * Esperanto (eo.po) by Serge Leblanc