@@ -6,8 +6,11 @@ base-installer (1.90) UNRELEASED; urgency=low
   [ Frans Pop ]
   * Remove Bdale Garbee and Sven Luther as Uploaders with many thanks for
     their past contributions.
+  * Revert to bind-mounting the installation CD in /target because in some
+    cases the fact that the CD is already mounted on /cdrom can prevent the CD
+    from being scanned. Closes: #475639.
 
- -- Frans Pop <fjp@debian.org>  Tue, 08 Apr 2008 13:18:23 +0200
+ -- Frans Pop <fjp@debian.org>  Sun, 27 Apr 2008 23:24:33 +0200
 
 base-installer (1.89) unstable; urgency=low
 
